Correction des erreurs de taille de police et de contrast

--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ h5,
 h6,
 p,
 label,
-.btn,
+.btn, 
 a {
     font-family: "helvetica";
     font-weight: 400;
@@ -676,6 +676,10 @@ a {
     font-size: 2rem;
 }
 
+.footer__text {
+    color: #FFF;
+}
+
 .container {
     max-width: 1000px;
 }
@@ -699,7 +703,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -793,16 +797,16 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #8a411f;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: #8a411f;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine:hover {
